--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@types/react": "^16.9.46",
 		"@types/react-dom": "^16.9.8",
 		"concurrently": "^5.3.0",
+		"custom-electron-titlebar": "^3.2.4",
 		"drivelist": "^9.1.0",
 		"electron": "^9.2.1",
 		"electron-builder": "^22.8.0",
