--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"electronmon": "^1.1.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-onclickoutside": "^6.9.0",
 		"react-scripts": "^3.4.1",
 		"sass": "^1.26.10",
 		"typescript": "^3.9.7",
